overflow fixed

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,7 +1,8 @@
 html {
 	font-size: 62.5%;
 	scroll-behavior: smooth;
-	scroll-snap-type: y proximity;
+	overflow-x: hidden;
+	// scroll-snap-type: y proximity;
 }
 
 body {
